[gd_scene load_steps=25 format=2]

[ext_resource path="res://modelscenes/grainsilo.tscn" type="PackedScene" id=1]
[ext_resource path="res://modelscenes/farmground.tscn" type="PackedScene" id=2]
[ext_resource path="res://modelscenes/barn.tscn" type="PackedScene" id=3]
[ext_resource path="res://modelscenes/haybale.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Opening.gd" type="Script" id=5]
[ext_resource path="res://modelscenes/rose.tscn" type="PackedScene" id=6]
[ext_resource path="res://modelscenes/plant.tscn" type="PackedScene" id=7]
[ext_resource path="res://modelscenes/pitchfork.tscn" type="PackedScene" id=8]
[ext_resource path="res://modelscenes/farmhouse.tscn" type="PackedScene" id=9]
[ext_resource path="res://modelscenes/tree.tscn" type="PackedScene" id=10]
[ext_resource path="res://font/Creepster-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://font/Opening.tres" type="DynamicFont" id=12]
[ext_resource path="res://sounds/scarecrowtitle.ogg" type="AudioStream" id=13]
[ext_resource path="res://font/Fresca-Regular.ttf" type="DynamicFontData" id=14]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0.207843, 0.0980392, 0.478431, 1 )
sky_horizon_color = Color( 0.247059, 0.266667, 0.870588, 1 )
ground_bottom_color = Color( 0.0980392, 0.25098, 0.117647, 1 )
ground_horizon_color = Color( 0.0862745, 0.164706, 0.0509804, 1 )
sun_energy = 0.5
texture_size = 3

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "invaded"
length = 2.0

[sub_resource type="BoxShape" id=4]
extents = Vector3( 100, 5, 1 )

[sub_resource type="DynamicFont" id=5]
size = 60
outline_size = 2
outline_color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 14 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://font/Fresca-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
size = 25
font_data = SubResource( 9 )

[node name="Farm" type="Spatial"]
script = ExtResource( 5 )

[node name="farmground" parent="." instance=ExtResource( 2 )]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.942157, 0.335172, 0, -0.335172, -0.942157, 0, 9.17268, 0 )
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="barn" parent="." instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4.82587, 0, 9.80505 )

[node name="grainsilo" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.7022, -0.369253, 23.0016 )

[node name="haybale" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.0862, 0, 2.51699 )

[node name="pitchfork" parent="." instance=ExtResource( 8 )]
transform = Transform( -0.3, 8.10454e-09, -2.49432e-08, 0, 0.285317, 0.0927051, 2.62268e-08, 0.0927051, -0.285317, 11.294, 0.027, 0.8 )

[node name="tree" parent="." instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 24.1353, -0.159658, 23.8584 )

[node name="tree6" parent="." instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -73.754, -0.159658, 45.929 )

[node name="tree7" parent="." instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 71.2762, -0.159658, 51.9275 )

[node name="tree3" parent="." instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -48.4707, -0.159658, 7.27843 )

[node name="tree5" parent="." instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -27.8451, -0.159658, 26.474 )

[node name="tree4" parent="." instance=ExtResource( 10 )]
transform = Transform( -2.71152e-08, 0, 0.620323, 0, 0.926094, 0, -1, 0, -4.37114e-08, -57.1803, -0.159658, 23.163 )

[node name="tree2" parent="." instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1.21371, 0, -1.35504, 0, -5.92307e-08, 35.0423, -0.528427, 51.5844 )

[node name="farmhouse" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -36.1534, -0.294436, 8.70549 )

[node name="plant" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 47.794, -1.09664, -9.69403 )

[node name="plant2" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 53.1444, -1.09664, -9.69403 )

[node name="plant3" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 59.9029, -0.97372, -9.69403 )

[node name="plant4" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 66.5675, -0.975168, -9.69403 )

[node name="plant5" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 72.7628, -1.09664, -9.69403 )

[node name="plant6" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 78.4887, -1.09664, -9.69403 )

[node name="plant7" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 84.0269, -0.35562, -9.69403 )

[node name="plant8" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 47.794, -1.16113, -4.4642 )

[node name="plant9" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 53.1444, -0.993893, -4.4642 )

[node name="plant10" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 59.9029, -0.472734, -4.4642 )

[node name="plant11" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 66.5675, -0.562159, -4.4642 )

[node name="plant12" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 72.7628, -0.621932, -4.4642 )

[node name="plant13" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 78.4887, -0.745883, -4.4642 )

[node name="plant14" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 84.0269, -0.35562, -4.4642 )

[node name="plant15" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 47.794, -1.16113, 0.26139 )

[node name="plant16" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 53.1444, -0.628979, 0.26139 )

[node name="plant17" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 59.9029, -0.203223, 0.26139 )

[node name="plant18" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 66.5675, -0.374975, 0.26139 )

[node name="plant19" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 72.7628, -0.343439, 0.26139 )

[node name="plant20" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 78.4887, -0.448867, 0.26139 )

[node name="plant21" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 84.0269, -0.818556, 0.26139 )

[node name="plant22" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 47.794, -1.20253, 5.28848 )

[node name="plant23" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 53.1444, -0.90661, 5.28848 )

[node name="plant24" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 59.9029, -0.30378, 5.28848 )

[node name="plant25" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 66.5675, -0.374975, 5.28848 )

[node name="plant26" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 72.7628, -0.343439, 5.28848 )

[node name="plant27" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 78.4887, -0.742934, 5.28848 )

[node name="plant28" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 84.0269, -0.818556, 5.28848 )

[node name="plant29" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 47.794, -1.20253, 11.0833 )

[node name="plant30" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 53.1444, -0.90661, 11.0833 )

[node name="plant31" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 59.9029, -0.30378, 11.0833 )

[node name="plant32" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 66.5675, -0.374975, 11.0833 )

[node name="plant33" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 72.7628, -0.51137, 11.0833 )

[node name="plant34" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 78.4887, -0.742934, 11.0833 )

[node name="plant35" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 84.0269, -0.818556, 11.0833 )

[node name="plant36" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 47.794, -1.30956, 16.5899 )

[node name="plant37" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 53.1444, -1.21339, 16.5899 )

[node name="plant38" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 59.9029, -0.412563, 16.5899 )

[node name="plant39" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 66.5675, -0.598045, 16.5899 )

[node name="plant40" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 72.7628, -0.782934, 16.5899 )

[node name="plant41" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 78.4887, -0.991711, 16.5899 )

[node name="plant42" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 84.0269, -1.16969, 16.5899 )

[node name="plant43" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 47.794, -1.30956, 21.8486 )

[node name="plant44" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 53.1444, -1.34097, 21.8486 )

[node name="plant45" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 59.9029, -1.00472, 21.8486 )

[node name="plant46" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 66.5675, -0.89907, 21.8486 )

[node name="plant47" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 72.7628, -0.927742, 21.8486 )

[node name="plant48" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 78.4887, -0.991711, 21.8486 )

[node name="plant49" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 84.0269, -1.308, 21.8486 )

[node name="rose" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -33.1258, -0.0171999, 0 )

[node name="rose2" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -32.7251, -0.0171999, 0.486602 )

[node name="rose3" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -33.387, -0.0171999, 0.316824 )

[node name="rose4" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -38.9878, -0.0171999, 0 )

[node name="rose5" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -38.5871, -0.0171999, 0.486602 )

[node name="rose6" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -39.249, -0.0171999, 0.316824 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/invaded = SubResource( 3 )

[node name="Boundary" type="StaticBody" parent="."]
collision_layer = 32

[node name="CollisionShape" type="CollisionShape" parent="Boundary"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 58.673 )
shape = SubResource( 4 )

[node name="Boundary2" type="StaticBody" parent="."]
collision_layer = 32

[node name="CollisionShape" type="CollisionShape" parent="Boundary2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -55.1059 )
shape = SubResource( 4 )

[node name="Boundary3" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -24.8443, 0, 0 )
collision_layer = 32

[node name="CollisionShape" type="CollisionShape" parent="Boundary3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -55.1059 )
shape = SubResource( 4 )

[node name="Boundary4" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -24.8443, 0, 0 )
collision_layer = 32

[node name="CollisionShape" type="CollisionShape" parent="Boundary4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.51662e-06, 2.5, 116.854 )
shape = SubResource( 4 )

[node name="ScarecrowSpawnSpot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 54.6031, 0, 88.0648 )

[node name="ScarecrowSpawnSpot2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.37537, 0, 88.0648 )

[node name="ScarecrowSpawnSpot3" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -97.7725, 0, 4.86765 )

[node name="ScarecrowSpawnSpot4" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -97.7725, 0, 0.111294 )

[node name="ScarecrowSpawnSpot5" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -85.0858, 0, -80.0943 )

[node name="ScarecrowSpawnSpot6" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -21.6348, 0, -80.0943 )

[node name="ScarecrowSpawnSpot7" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 108.602, 0, -0.449402 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 18.3094, 3.77435, -12.7884 )

[node name="Label" type="Label" parent="."]
margin_left = 10.4144
margin_top = 98.0294
margin_right = 1025.42
margin_bottom = 170.029
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0901961, 0.921569, 0.298039, 1 )
text = "Scarecrow Paint"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnPlay" type="Button" parent="."]
pause_mode = 1
anchor_right = 0.146
anchor_bottom = 0.13
margin_left = 442.657
margin_top = 244.527
margin_right = 449.153
margin_bottom = 208.527
focus_neighbour_right = NodePath("../btnInstructions")
focus_neighbour_bottom = NodePath("../btnInstructions")
custom_fonts/font = ExtResource( 12 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnInstructions" type="Button" parent="."]
pause_mode = 1
anchor_right = 0.146
anchor_bottom = 0.13
margin_left = 442.649
margin_top = 309.713
margin_right = 451.145
margin_bottom = 273.713
focus_neighbour_left = NodePath("../btnPlay")
focus_neighbour_top = NodePath("../btnPlay")
focus_neighbour_right = NodePath("../btnCredits")
focus_neighbour_bottom = NodePath("../btnCredits")
custom_fonts/font = ExtResource( 12 )
text = "Instructions"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnCredits" type="Button" parent="."]
pause_mode = 1
anchor_right = 0.146
anchor_bottom = 0.13
margin_left = 444.063
margin_top = 377.595
margin_right = 452.559
margin_bottom = 341.595
focus_neighbour_left = NodePath("../btnInstructions")
focus_neighbour_top = NodePath("../btnInstructions")
custom_fonts/font = ExtResource( 12 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
autoplay = true

[node name="Instructions" type="ColorRect" parent="."]
visible = false
margin_left = -1.0
margin_top = -1.0
margin_right = 1028.0
margin_bottom = 629.0
color = Color( 0.223529, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Instructions"]
margin_left = 36.7279
margin_top = 146.941
margin_right = 983.728
margin_bottom = 500.941
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Instructions/ScrollContainer"]
margin_right = 918.0
margin_bottom = 327.0

[node name="Label" type="Label" parent="Instructions/ScrollContainer/VBoxContainer"]
margin_right = 918.0
margin_bottom = 327.0
custom_fonts/font = SubResource( 6 )
text = "Shoot the purple scarecrows' shirts with green paint, and the green scarecrows shirts with
purple paint.  Do not paint them with the same color as their shirts, or they will become 
more powerful.  Do not let them reach the barn.

Move: WASD or left joystck
Look Around: Mouse or right joystick
Shoot: Left Click or R2
Choose paint color: 1 and 2, or direction arrows on joystick
Pause: Escape
Unpause: Right click"

[node name="Label" type="Label" parent="Instructions"]
margin_left = 4.0
margin_top = 38.0
margin_right = 950.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 7 )
text = "Instructions"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnBack" type="Button" parent="Instructions"]
anchor_right = 0.114
anchor_bottom = 0.101
margin_left = 480.799
margin_top = 520.0
margin_right = 480.493
margin_bottom = 498.37
custom_fonts/font = ExtResource( 12 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="ColorRect" parent="."]
visible = false
margin_right = 1043.0
margin_bottom = 621.0
color = Color( 0.266667, 0.239216, 0.239216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Credits"]
margin_left = -3.0
margin_top = 21.0
margin_right = 1020.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 8 )
text = "Credits"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Credits"]
anchor_left = -0.072
anchor_top = 0.103
anchor_right = -0.072
anchor_bottom = 0.103
margin_left = 149.096
margin_top = 39.037
margin_right = 1031.1
margin_bottom = 397.037
focus_neighbour_right = NodePath("../btnCreditsBack")
focus_neighbour_bottom = NodePath("../btnCreditsBack")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/ScrollContainer"]
margin_right = 354.0
margin_bottom = 1020.0

[node name="Label2" type="Label" parent="Credits/ScrollContainer/VBoxContainer"]
margin_right = 354.0
margin_bottom = 1020.0
custom_fonts/font = SubResource( 10 )
text = "First Person Controller:

Linko (MIT Licence)


Sound Effects:

Owlish Media:
Sound Effects Pack

Lasse Buhrmann, a.k.a. EmoPreben:
Playersounds 1

Supergeek:
	Do You Remember Laughter?

rubberduck:
40 CC0 water / splash / slime SFX
25 CCO Bang/Firework SFX

https://www.fesliyanstudios.com:
Footstep Sound Effects

Virtual Instruments:

Garritan Personal Orchestra
Garritan World Instruments
Spitfire Labs Strings 2
Spitfire Labs Music Box

3D Models and Music by Robin Lamb"

[node name="btnCreditsBack" type="Button" parent="Credits"]
anchor_right = 0.012
anchor_bottom = 0.064
margin_left = 473.761
margin_top = 526.087
margin_right = 525.245
margin_bottom = 528.343
custom_fonts/font = ExtResource( 12 )
text = "Back"

[connection signal="pressed" from="btnPlay" to="." method="_on_btnPlay_pressed"]
[connection signal="pressed" from="btnInstructions" to="." method="_on_btnInstructions_pressed"]
[connection signal="pressed" from="btnCredits" to="." method="_on_btnCredits_pressed"]
[connection signal="pressed" from="Instructions/btnBack" to="." method="_on_btnBack_pressed"]
[connection signal="pressed" from="Credits/btnCreditsBack" to="." method="_on_btnCreditsBack_pressed"]
